Remove browser instance from progress listener list when it is closed b=45817,r=valeski,a=valeski